# MyApplication

./: .gitignore  build.gradle  settings.gradle  参考.txt
aidlservice/: build.gradle
aidlservice/src/main/: AndroidManifest.xml
aiimageupload/: build.gradle
aiimageupload/src/main/: AndroidManifest.xml
algorithm/: build.gradle
algorithm/release/: algorithm-release.apk  jniapp-release.apk  output-metadata.json
algorithm/src/main/: AndroidManifest.xml
app/: build.gradle
bitmaptest/: build.gradle  说明.txt
bitmaptest/src/main/: AndroidManifest.xml
calcautor/: build.gradle
calcautor/src/main/: AndroidManifest.xml
calentar/: build.gradle
callkit/: AndroidManifest.xml  build.gradle
callkit/res/layout/: callkit_rc_voip_activity_select_member_layout.xml  rc_voip_audio_call_user_info_incoming.xml  rc_voip_user_info.xml  rc_voip_user_info_mutlaudio.xml
callkit/res/values/: colors.xml  rc_voipkit_color.xml  rc_voipkit_style.xml  strings.xml
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
canvastest/: build.gradle
canvastest/src/main/: AndroidManifest.xml
cardviewswitch/: build.gradle
cardviewswitch/src/main/: AndroidManifest.xml
chart/: build.gradle
chart/src/main/: AndroidManifest.xml
colorpicker/: build.gradle
colorpickerview/: build.gradle
coordinatorlayout/: build.gradle
customerlauncher3/: build.gradle
dialogapplication/: build.gradle
googleapplication/: build.gradle  googleapp.jks
googlemap/: build.gradle
googlemap/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
imkit/: build.gradle
ipscan/: build.gradle
jinnativelib/: build.gradle
jitpacklibrary/: build.gradle
jniapp/: build.gradle
jsweview/: build.gradle
launcher/: build.gradle
launchericon/: build.gradle
nativelib/src/main/cpp/: CMakeLists.txt  dynamicnativelib2.cpp  jnitojava.cpp  nativelib.cpp
nfc/: build.gradle
nohttp/: build.gradle
opencvsdk/: build.gradle
reflect/: build.gradle
rongimapplication/: build.gradle
rxjava/: build.gradle
schemetest/: build.gradle
schemetestmain/: build.gradle
servicetest/: build.gradle
signalr/: build.gradle
svgtest/: build.gradle  说明.txt
tangnativeapp/: build.gradle
usbmanager/: build.gradle
utils/: build.gradle
voicechanger/: build.gradle
websocket/: build.gradle
(+543 files in other folders)
